# sql-to-csv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/libsqlconv/: Cargo.toml
crates/libsqlconv/src/: csv_emit.rs  ddl.rs  errors.rs  index.rs  input.rs  lexer.rs  lib.rs  manifest.rs  parallel.rs  types.rs  values_parser.rs
crates/libsqlconv/tests/: integration.rs
crates/libsqlconv/tests/golden/: multi_table.sql
crates/sql-to-csv/: Cargo.toml
crates/sql-to-csv-xtask/: Cargo.toml
crates/sql-to-csv-xtask/src/: main.rs
crates/sql-to-csv/src/: cli.rs  main.rs
docs/: sql-to-csv.md
scripts/: setup-homebrew-tap.sh
