[package]
name = "libsqlconv"
version = "0.1.0"
edition = "2021"
description = "Core library for sql-to-csv: SQL dump parsing, DDL conversion, and CSV/TSV emission"
license = "MIT"
repository = "https://github.com/bmamouri/sql-to-csv"

[dependencies]
csv = "1"
flate2 = "1"
memchr = "2"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
indicatif = "0.17"
